[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/negotiation.gd" type="Script" id=1]
[ext_resource path="res://scenes/npc.gd" type="Script" id=2]
[ext_resource path="res://scenes/player_character.gd" type="Script" id=3]
[ext_resource path="res://scenes/player_action.gd" type="Script" id=4]
[ext_resource path="res://scenes/offer_slider.gd" type="Script" id=5]

[node name="Negotiation" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offers" type="Label" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -102.0
margin_bottom = 27.0
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="offer_slider" type="HSlider" parent="UI"]
margin_left = 17.0
margin_top = 481.0
margin_right = 344.0
margin_bottom = 503.0
rect_scale = Vector2( 1, 2 )
min_value = 1.0
max_value = 20.0
value = 10.0
rounded = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
margin_top = -2.0
margin_right = 360.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel"]
margin_right = 360.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_gold" type="Label" parent="UI/Panel/HBoxContainer"]
margin_right = 87.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Gold: 
"
align = 1
valign = 1
uppercase = true

[node name="Avg_price_paid" type="Label" parent="UI/Panel/HBoxContainer"]
margin_left = 91.0
margin_right = 178.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Average
Price paid: 
"
align = 1
valign = 1
uppercase = true

[node name="Total_items" type="Label" parent="UI/Panel/HBoxContainer"]
margin_left = 182.0
margin_right = 269.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Items: 
"
align = 1
valign = 1
uppercase = true

[node name="Remaining_npcs" type="Label" parent="UI/Panel/HBoxContainer"]
margin_left = 273.0
margin_right = 360.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Remaining
Sellers:
%s"
align = 1
valign = 1
uppercase = true

[node name="player_action" type="GridContainer" parent="UI"]
margin_left = 1.0
margin_top = 536.0
margin_right = 361.0
margin_bottom = 638.0
custom_constants/hseparation = 29
columns = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reject_offer" type="Button" parent="UI/player_action"]
margin_right = 100.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reject Offer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="make_offer" type="Button" parent="UI/player_action"]
margin_left = 129.0
margin_right = 229.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Offer 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accept_offer" type="Button" parent="UI/player_action"]
margin_left = 258.0
margin_right = 358.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept Offer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_character" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PLAYER_SPRITE_STANDIN" type="Label" parent="player_character"]
margin_left = 133.0
margin_top = 389.0
margin_right = 179.0
margin_bottom = 403.0
rect_scale = Vector2( 2, 2 )
text = "PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="npc" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="NPC_SPRITE_STANDIN" type="Label" parent="npc"]
margin_left = 136.0
margin_top = 144.0
margin_right = 182.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
text = "NPC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="UI/offer_slider" to="UI/offer_slider" method="_on_offer_slider_value_changed"]
[connection signal="value_changed" from="UI/offer_slider" to="player_character" method="_on_offer_slider_value_changed"]
[connection signal="pressed" from="UI/player_action/reject_offer" to="UI/player_action" method="_on_reject_offer_pressed"]
[connection signal="pressed" from="UI/player_action/make_offer" to="UI/player_action" method="_on_make_offer_pressed"]
[connection signal="pressed" from="UI/player_action/accept_offer" to="UI/player_action" method="_on_accept_offer_pressed"]
